src/manifests/postgres/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: databases
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    db-access: "allow"
---
apiVersion: v1
kind: Namespace
metadata:
  name: ray
  labels:
    db-access: "allow"
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
  labels:
    db-access: "allow"
