src/manifests/postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-labeled-namespaces
  namespace: databases
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: app-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              db-access: "allow"
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
